Implemented CommentMSG and UncommentMSG
abbastanza basic

Ogni volta che implemento qualcosa aggiusto l'API, prima o poi sarà completo...
